bluejay-typegen/tests/validation_cases/error/union_multiple_inline_fragments_for_same_type.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: Foo
    }

    type Bar {
        bar: String
    }

    type Baz {
        baz: String
    }

    union Foo = Bar | Baz
])]
mod schema {
    #[query([
        {
            foo {
                __typename
                ...on Bar { bar }
                ...on Bar { bar }
            }
        }
    ])]
    mod query {}
}

fn main() {}
